--- a/index.html
+++ b/index.html
@@ -253,7 +253,7 @@
                 <header class="mb-6">
                     <h1 class="text-2xl sm:text-3xl font-bold text-gray-800 dark:text-gray-100 flex items-center">
                         <i class="fas fa-trophy text-yellow-500 dark:text-yellow-400 mr-3"></i>
-                        Predictions Leaderboard
+                        Predictions QuantIntelli+ Leaderboard
                     </h1>
                     <div class="mt-4 p-4 bg-blue-50 dark:bg-accent-500/10 rounded-md border border-blue-100 dark:border-accent-500/30">
                         <h2 class="text-lg font-semibold text-blue-800 dark:text-accent-100 mb-2">How Our Predictions Work</h2>
@@ -1344,3 +1344,4 @@
         </script>
     </body>
 </html>
+
